feat:projet part's added

--- a/index.html
+++ b/index.html
@@ -121,82 +121,82 @@
             <span class="text-[white] text-[2rem] max-md:hidden font-[400] font-(--font-poppins)">notion</span>
             <img class="size-[2.4rem] max-md:hidden" src="assets/images/asterice.svg" alt="asterice"> 
         </div>
-        <div class="px-[2.3rem] mt-[4.7rem] flex flex-col gap-[5.2rem]">
-            <div class="flex gap-[1.2rem] items-center">
-                <h1 class="text-[white] text-[1.8rem] font-[400] font-(--font-poppins)">My process to design</h1>
-                <img class="size-[2.23rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
+        <div class="px-[2.3rem] md:px-[17.1rem] mt-[4.7rem] md:mt-[9rem] flex flex-col gap-[5.2rem]">
+            <div class="flex gap-[1.2rem] md:gap-[3rem] items-center">
+                <h1 class="text-[white] text-[1.8rem] md:text-[4rem] font-[400] font-(--font-poppins)">My process to design</h1>
+                <img class="size-[2.23rem] md:size-[3.6rem] " src="assets/images/doubleetoile.svg" alt="doubleetoile">
             </div>
-            <div class="flex flex-col gap-[0.8rem] text-[white]">
-                <div class="flex gap-[2.833rem] items-start">
-                    <div class="flex flex-col items-center gap-[0.8rem]">
-                        <span class="size-[2.4rem]  flex items-center justify-center rounded-[50%] border-[0.1rem] border-[white]" >1</span>
-                        <hr class="bg-[white] w-[0.05rem] h-[15rem]">
+            <div class="flex flex-col gap-[0.8rem] md:gap-[4rem] text-[white]">
+                <div class="flex gap-[2.833rem] md:gap-[6.4rem] items-start">
+                    <div class="flex flex-col items-center gap-[0.8rem] md:gap-[2rem]">
+                        <span class="size-[2.4rem] md:size-[5.6rem] flex items-center justify-center rounded-[50%] border-[0.1rem] md:text-[2.2rem] border-[white]" >1</span>
+                        <hr class="bg-[white] w-[0.05rem] md:w-[0.1rem] h-[15rem] md:h-[28rem]">
                     </div>
-                    <div class="flex flex-col gap-[1.4rem]">
-                        <div><img class="size-[2.4rem]" src="assets/images/cercle1.svg" alt="1"></div>
-                        <h1 class="text-[1.2rem] font-[400] font-(--font-poppins)">Step 1: Product design Research</h1>
-                        <p class="text-[0.9rem] font-[400] font-(--font-poppins)">This initial step involves a systematic and thorough <br> exploration of the market landscape, user needs, and <br> existing solutions.</p>
-                        <div class="flex p-[0.15rem] w-[8.3rem] rounded-[2rem]" id="borderlinear">
-                            <button class="text-[#FFFFFF] bg-[#101111] text-[0.9rem] w-[8.3rem] h-[2.2rem] rounded-[2rem] font-[400] font-(--font-poppins)">
+                    <div class="flex flex-col gap-[1.4rem] md:gap-[3.3rem]">
+                        <div><img class="size-[2.4rem] md:size-[5.6rem]" src="assets/images/cercle1.svg" alt="1"></div>
+                        <h1 class="text-[1.2rem] md:text-[2.2rem] font-[400] font-(--font-poppins)">Step 1: Product design Research</h1>
+                        <p class="text-[0.9rem] md:text-[1.9rem] font-[400] font-(--font-poppins)">This initial step involves a systematic and thorough <br> exploration of the market landscape, user needs, and <br> existing solutions.</p>
+                        <div class="flex p-[0.15rem] w-[8.3rem] md:w-[17.5rem] rounded-[2rem] md:rounded-[7rem]" id="borderlinear">
+                            <button class="text-[#FFFFFF] bg-[#101111] text-[0.9rem] md:text-[1.8rem] w-[8.3rem] md:w-[17.5rem] h-[2.2rem]  h-[5rem] rounded-[2rem] md:rounded-[7rem] font-[400] font-(--font-poppins)">
                                 See Examples
                             </button>
                         </div>
                     </div>
                 </div>
-                <div class="flex gap-[2.833rem] items-start">
-                    <div class="flex flex-col items-center gap-[0.8rem]">
-                        <span class="size-[2.4rem]  flex items-center justify-center rounded-[50%] border-[0.1rem] border-[white]" >2</span>
-                        <hr class="bg-[white] w-[0.05rem] h-[10rem]">
+                <div class="flex gap-[2.833rem] md:gap-[6.4rem] items-start">
+                    <div class="flex flex-col items-center gap-[0.8rem] md:gap-[2rem]">
+                        <span class="size-[2.4rem] md:size-[5.6rem] flex items-center justify-center rounded-[50%] border-[0.1rem] md:text-[2.2rem] border-[white]" >2</span>
+                        <hr class="bg-[white] w-[0.05rem] md:w-[0.1rem] h-[10rem] md:h-[20rem]">
                     </div>
-                    <div class="flex flex-col gap-[1.4rem]">
-                        <div><img class="size-[2.4rem]" src="assets/images/cercle2.svg" alt="2"></div>
-                        <h1 class="text-[1.2rem] font-[400] font-(--font-poppins)">Step 2: UI design in figma</h1>
-                        <p class="text-[0.9rem] font-[400] font-(--font-poppins)">This initial step involves a systematic and thorough <br> exploration of the market landscape, user needs, and <br> existing solutions.</p>
+                    <div class="flex flex-col gap-[1.4rem] md:gap-[3.3rem]">
+                        <div><img class="size-[2.4rem] md:size-[5.6rem]" src="assets/images/cercle2.svg" alt="2"></div>
+                        <h1 class="text-[1.2rem] font-[400] md:text-[2.2rem] font-(--font-poppins)">Step 2: UI design in figma</h1>
+                        <p class="text-[0.9rem] md:text-[1.9rem] font-[400] font-(--font-poppins)">This initial step involves a systematic and thorough <br> exploration of the market landscape, user needs, and <br> existing solutions.</p>
                     </div>
                 </div>
-                <div class="flex gap-[2.833rem] items-start">
-                    <div class="flex flex-col items-center gap-[0.8rem]">
-                        <span class="size-[2.4rem]  flex items-center justify-center rounded-[50%] border-[0.1rem] border-[white]" >3</span>
-                        <hr class="bg-[white] w-[0.05rem] h-[2rem]">
+                <div class="flex gap-[2.833rem] md:gap-[6.4rem] items-start">
+                    <div class="flex flex-col items-center gap-[0.8rem] md:gap-[2rem]">
+                        <span class="size-[2.4rem] md:size-[5.6rem] flex items-center justify-center rounded-[50%] border-[0.1rem] md:text-[2.2rem] border-[white]" >3</span>
+                        <hr class="bg-[white] w-[0.05rem] h-[2rem] md:hidden">
                     </div>
-                    <div class="flex flex-col gap-[1.4rem]">
-                        <div><img class="size-[2.4rem]" src="assets/images/cercle3.svg" alt="3"></div>
-                        <h1 class="text-[1.2rem] font-[400] font-(--font-poppins)">Step 3: No-code develop in webflow</h1>
-                        <p class="text-[0.9rem] font-[400] font-(--font-poppins)">This initial step involves a systematic and thorough <br> exploration of the market landscape, user needs, and <br> existing solutions.</p>
+                    <div class="flex flex-col gap-[1.4rem] md:gap-[3.3rem]">
+                        <div><img class="size-[2.4rem] md:size-[5.6rem]" src="assets/images/cercle3.svg" alt="3"></div>
+                        <h1 class="text-[1.2rem] font-[400] md:text-[2.2rem] font-(--font-poppins)">Step 3: No-code develop in webflow</h1>
+                        <p class="text-[0.9rem] md:text-[1.9rem] font-[400] font-(--font-poppins)">This initial step involves a systematic and thorough <br> exploration of the market landscape, user needs, and <br> existing solutions.</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="flex gap-[1.2rem] px-[2.3rem] mt-[3.2rem] mb-[6.4rem] items-center">
-            <h1 class="text-[white] text-[1.8rem] font-[400] font-(--font-poppins)">Some featured projects</h1>
-            <img class="size-[2.23rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
+        <div class="flex gap-[1.2rem] md:gap-[2.9rem] px-[2.3rem] md:px-[17.1rem] mt-[3.2rem] md:mt-[9rem] mb-[6.4rem] items-center">
+            <h1 class="text-[white] text-[1.8rem] md:text-[4rem] font-[400] font-(--font-poppins)">Some featured projects</h1>
+            <img class="size-[2.23rem] md:size-[3.6rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
         </div>
-        <div class="flex flex-col gap-[8.1rem] items-center px-[2.3rem]">
-            <div class="flex flex-col gap-[3.1rem] bg-[#151515]">
-                <div class="w-[32rem] h-[15.7rem]  bg-[url(assets/images/projetcanal2.png)] bg-[contain] bg-no-repeat"></div>
-                <div>
-                    <img src="assets/images/1.svg" alt="number">
-                    <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">canal 2 page's</h1>
+        <div class="flex flex-col gap-[8.1rem] items-center md:items-start px-[2.3rem] md:px-[17.3rem]">
+            <div class="flex flex-col gap-[3.1rem] md:gap-[10.2rem] md:flex-row md:items-center md:px-[9.5rem] md:py-[5.5rem] bg-[#151515]">
+                <div class="size-[31.5rem] md:size-[54rem] bg-[url(assets/images/projetcanal2.png)] bg-[contain] bg-no-repeat"></div>
+                <div class="flex flex-col md:gap-[3.8rem]">
+                    <img class="md:size-[5.3rem] size-[3rem] rounded-[50%] justify-center items-center flex" id="borderlinear" src="assets/images/1.svg" alt="number">
+                    <h1 class="text-[2.085rem] md:text-[3.6rem] font-[700] font-(--font-poppins) text-[white]">canal 2 page's</h1>
                 </div>
             </div>
-            <div class="flex flex-col gap-[3.1rem] bg-[#151515]">
-                <div class="w-[32rem] h-[15.7rem]  bg-[url(assets/images/ladingpage.png)] bg-[contain] bg-no-repeat"></div>
-                <div>
-                    <img src="assets/images/2.svg" alt="number">
-                    <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">landing page's</h1>
+            <div class="flex flex-col gap-[3.1rem] md:gap-[10.2rem] md:flex-row md:items-center md:px-[9.5rem] md:py-[5.5rem] bg-[#151515]">
+                <div class="size-[31.5rem] md:size-[54rem] bg-[url(assets/images/ladingpage.png)] bg-[contain] bg-no-repeat"></div>
+                <div class="flex flex-col md:gap-[3.8rem]">
+                    <img class="md:size-[5.3rem] size-[3rem] rounded-[50%] justify-center items-center flex" src="assets/images/2.svg" id="borderlinear" alt="number">
+                    <h1 class="text-[2.085rem] md:text-[3.6rem] font-[700] font-(--font-poppins) text-[white]">landing page's</h1>
                 </div>
             </div>
-            <div class="flex flex-col gap-[3.1rem] bg-[#151515]">
-                <div class="w-[32rem] h-[20.7rem] bg-[url(assets/images/wedding.png)] bg-[contain] bg-no-repeat"></div>
-                <div>
-                    <img src="assets/images/3.svg" alt="number">
-                    <h1 class="text-[2.085rem] font-[700] font-(--font-poppins) text-[white]">wedding invite</h1>
+            <div class="flex flex-col gap-[3.1rem] md:gap-[10.2rem] md:flex-row md:items-center md:px-[9.5rem] md:py-[5.5rem] bg-[#151515]">
+                <div class="size-[31.5rem] md:size-[54rem] bg-[url(assets/images/wedding.png)] bg-[contain] bg-no-repeat"></div>
+                <div class="flex flex-col md:gap-[3.8rem]">
+                    <img class="md:size-[5.3rem] size-[3rem] rounded-[50%] justify-center items-center flex" src="assets/images/3.svg" id="borderlinear" alt="number">
+                    <h1 class="text-[2.085rem] md:text-[3.6rem] font-[700] font-(--font-poppins) text-[white]">wedding invite</h1>
                 </div>
             </div>
         </div>
-        <div class="flex gap-[1.2rem] px-[2.3rem] mt-[3.2rem] mb-[4.4rem] items-center">
-            <h1 class="text-[white] text-[1.8rem] font-[400] font-(--font-poppins)">Client testimonials</h1>
-            <img class="size-[2.23rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
+        <div class="flex gap-[1.2rem] md:gap-[2.9rem] px-[2.3rem] md:px-[19rem] mt-[3.2rem] md:mt-[15rem] mb-[6.4rem] md:mb-[9.5rem] items-center">
+            <h1 class="text-[white] text-[1.8rem] md:text-[4rem] font-[400] font-(--font-poppins)">Client testimonials</h1>
+            <img class="size-[2.23rem] md:size-[3.6rem]" src="assets/images/doubleetoile.svg" alt="doubleetoile">
         </div>
         <div class="flex items-center gap-[1.4rem] flex-col">
             <div class="p-[0.13rem] items-center justify-center w-[33rem] gap-[1.3rem] flex-col bg-linear-to-br from-[#FFD49C]  via-[#7D7AFB] via-[#151515] to-[#151515] rounded-[2rem]">
